src/objects/Ordered_BOM_Parts__c/Ordered_BOM_Parts__c.object-meta.xml
<CustomObject>
    <label>Ordered BOM Parts</label>
    <nameField>
        <label>Ordered BOM Parts Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ordered BOM Parts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>