src/objects/Ordered_BOM_Parts__c/fields/BOM_Product_Part__c.field-meta.xml
<CustomField>
    <fullName>BOM_Product_Part__c</fullName>
    <label>BOM Product Part</label>
    <referenceTo>BOM_Product_Part__c</referenceTo>
    <relationshipLabel>Ordered BOM Parts</relationshipLabel>
    <relationshipName>Ordered_BOM_Parts</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>