src/objects/Ordered_BOM_Parts__c/fields/Deutch_Rich_Text_Description__c.field-meta.xml
<CustomField>
    <fullName>Deutch_Rich_Text_Description__c</fullName>
    <label>Deutsch Rich Text Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>