src/objects/Ordered_BOM_Parts__c/fields/English_Rich_Text_Description__c.field-meta.xml
<CustomField>
    <fullName>English_Rich_Text_Description__c</fullName>
    <label>English Rich Text Description</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>