src/objects/Ordered_BOM_Parts__c/fields/OpportunityProduct__c.field-meta.xml
<CustomField>
    <fullName>OpportunityProduct__c</fullName>
    <label>Opportunity Product</label>
    <length>20</length>
    <type>Text</type>
</CustomField>