src/objects/Ordered_BOM_Parts__c/fields/OrderProduct__c.field-meta.xml
<CustomField>
    <fullName>OrderProduct__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Order Product</label>
    <referenceTo>OrderItem</referenceTo>
    <relationshipLabel>Ordered BOM Parts</relationshipLabel>
    <relationshipName>Ordered_BOM_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>