src/objects/Ordered_BOM_Parts__c/fields/QuoteLineItem__c.field-meta.xml
<CustomField>
    <fullName>QuoteLineItem__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Quote Line Item</label>
    <referenceTo>Quote_Item__c</referenceTo>
    <relationshipLabel>Ordered BOM Parts</relationshipLabel>
    <relationshipName>Ordered_BOM_Parts</relationshipName>
    <type>Lookup</type>
</CustomField>